# hindsight

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  collectors.md  configuration.md  exporters.md
hindsight/: cli.py  config.py  doctor.py  models.py  qa.py  redact.py  schedule.py  store.py
hindsight/collectors/: __init__.py  activitywatch.py  base.py  chatgpt.py  claude_code.py  codex.py  cursor.py  history.py  vscode.py
hindsight/exporters/: __init__.py  json_out.py  markdown.py  notion.py  obsidian.py  webhook.py
hindsight/summarizer/: __init__.py  llm.py
tests/: test_cli_parse.py  test_cursor_global.py  test_doctor.py  test_models.py  test_qa.py  test_redact.py  test_render_digest.py  test_schedule_units.py  test_store.py  test_vscode_collector.py  test_webhook.py
